--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/plugin-transform-private-methods": "^7.25.4",
     "@biomejs/biome": "^1.8.3",
     "@iarna/toml": "^2.2.5",
+    "@liuli-util/vite-plugin-node": "^0.9.0",
     "@octokit/core": "^6.1.2",
     "@octokit/openapi-types": "^22.2.0",
     "@octokit/plugin-paginate-rest": "^11.3.3",
@@ -102,6 +103,7 @@
     "jest": "^29.7.0",
     "lefthook": "^1.7.15",
     "macos-release": "^3.3.0",
+    "magic-string": "^0.30.11",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
@@ -118,6 +120,7 @@
     "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
+    "rollup": "^4.21.2",
     "safe-stable-stringify": "^2.5.0",
     "semver": "7.6.3",
     "setup-apt": "workspace:*",
