--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
   cancel-in-progress: true
 
+env:
+  NODE_OPTIONS: --enable-source-maps
+
 jobs:
   Build:
     runs-on: ${{ matrix.os }}
