--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -203,7 +203,11 @@ jobs:
         env:
           RUNNER_OS_NAME: ${{ matrix.os }}
 
-      - name: Modern Integration Tests
+      - name: Setup Node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Smoke Test Modern Bundle
         if: ${{ !contains(github.event.head_commit.message, '[skip test]') }}
         run: |
           node ./dist/modern/setup-cpp.mjs --help
@@ -215,17 +219,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 12
-      - name: Smoke Test Node 12
+      - name: Smoke Test Legacy Bundle
         run: |
           node ./dist/legacy/setup-cpp.js --help
-
-      - name: Setup Node 16
-        uses: actions/setup-node@v4
-        with:
-          node-version: 16
-      - name: Smoke Test Node 16
-        run: |
-          node ./dist/modern/setup-cpp.mjs --help
+          node ./dist/legacy/setup-cpp.js --gcc true --cmake true
 
   Docker:
     name: Docker-${{ matrix.container.image }}
