build: transform babel via babel plugin

--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -50,6 +50,7 @@
     "apt-key"
   ],
   "devDependencies": {
-    "@types/memoizee": "0.4.11"
+    "@types/memoizee": "0.4.11",
+    "@types/which": "~3.0.4"
   }
 }
