--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-apt",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Setup apt packages and repositories in Debian/Ubuntu-based distributions",
   "repository": "https://github.com/aminya/setup-cpp",
   "homepage": "https://github.com/aminya/setup-cpp/tree/master/packages/setup-apt",
@@ -14,7 +14,8 @@
     "dev": "tsc --watch --pretty",
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@types/node": "^12",
