feat: add script for fetching LLVM asset list

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -11,7 +11,9 @@ ignorePaths:
   - "**/node_modules/"
   - .vscode/extensions.json
   - patches/*.patch
-  - "**/github_brechtsanders_winlibs_mingw.json"
+  - "**/github_*.json"
+  - "**/llvm_org_releases.json"
+
 words:
   - aarch
   - aminya
