--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/cross-spawn": "^6.0.6",
     "@types/escape-quotes": "~1.0.0",
     "@types/eslint": "^8.56.12",
+    "@types/he": "^1.2.3",
     "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.12",
     "@types/memoizee": "^0.4.11",
@@ -100,6 +101,7 @@
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
+    "he": "^1.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
     "lefthook": "^1.7.15",
