ci: create macos-arm setup-cpp binaries

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,7 +87,7 @@ jobs:
           - windows-2022
           - ubuntu-24.04
           - macos-13
-          # - macos-12
+          - macos-14 # arm64
         node:
           - 22
         pnpm:
