feat: support more compiler/tool aliases (e.g. clang, clang-tidy)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "orta.vscode-jest",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "biomejs.biome"
+    "biomejs.biome",
+    "p42ai.refactor"
   ]
 }
