--- a/action.yml
+++ b/action.yml
@@ -58,6 +58,9 @@ inputs:
   cpplint:
     description: "Wether to install cpplint (true/false) or the specific version to install."
     required: false
+  flawfinder:
+    description: "Wether to install flawfinder (true/false) or the specific version to install."
+    required: false
   clang-tidy:
     description: "Wether to install clang-tidy (true/false) or the specific version to install."
     required: false
