feat: add support for lizard

--- a/action.yml
+++ b/action.yml
@@ -61,6 +61,9 @@ inputs:
   flawfinder:
     description: "Wether to install flawfinder (true/false) or the specific version to install."
     required: false
+  lizard:
+    description: "Wether to install lizard (true/false) or the specific version to install."
+    required: false
   clang-tidy:
     description: "Wether to install clang-tidy (true/false) or the specific version to install."
     required: false
