--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "clean": "shx rm -rf ./dist ./packages/*/dist ./exe ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/modern ./dist/modern ",
     "dev.vite": "cross-env NODE_ENV=development vite build --watch",
     "dev.packages": "turbo dev",
-    "dev": "run-p build.json dev.packages dev.vite",
+    "dev.root.tsc": "tsc --noEmit --pretty --watch",
+    "dev": "run-p build.json dev.packages dev.root.tsc dev.vite",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
     "lint": "turbo lint && run-p --aggregate-output --continue-on-error lint.**",
@@ -54,6 +55,7 @@
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
   },
   "devDependencies": {
+    "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/http-client": "^2.2.3",
@@ -61,7 +63,7 @@
     "@actions/tool-cache": "^2.0.1",
     "@aminya/minijson": "1.1.0",
     "@babel/core": "^7.25.2",
-    "@biomejs/biome": "^1.9.1",
+    "@biomejs/biome": "^1.9.2",
     "@iarna/toml": "^2.2.5",
     "@liuli-util/vite-plugin-node": "^0.9.0",
     "@octokit/core": "^6.1.2",
@@ -75,11 +77,11 @@
     "@types/babel__core": "~7.20.5",
     "@types/cross-spawn": "^6.0.6",
     "@types/escape-quotes": "~1.0.0",
-    "@types/eslint": "^9.0.0",
+    "@types/eslint": "^9.6.1",
     "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.13",
     "@types/memoizee": "^0.4.11",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.5.5",
     "@types/semver": "^7.5.8",
     "@types/which": "^3.0.4",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#02526f866c4f57d3a097590942dc0e700fb3eb15",
@@ -89,17 +91,17 @@
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^8.14.3",
+    "cspell": "^8.14.4",
     "diagnostics_channel": "^1.1.0",
     "dprint": "^0.47.2",
     "envosman": "workspace:*",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
-    "execa": "^9.0.0",
+    "execa": "^9.4.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
     "lefthook": "^1.7.15",
@@ -109,7 +111,7 @@
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
     "node-downloader-helper": "2.1.9",
-    "npm-check-updates": "^17.1.1",
+    "npm-check-updates": "^17.1.2",
     "npm-run-all2": "^6.2.3",
     "numerous": "2.0.0",
     "p-timeout": "^6.1.2",
@@ -119,7 +121,7 @@
     "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
-    "rollup": "^4.21.3",
+    "rollup": "^4.22.0",
     "safe-stable-stringify": "^2.5.0",
     "semver": "7.6.3",
     "setup-apt": "workspace:*",
