fix: downgrade numerous + update @types/node

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build.vite": "cross-env NODE_ENV=production vite build",
     "build.vite.legacy": "cross-env NODE_ENV=production TARGET=legacy vite build",
     "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && minijson --file ./dist/**/*.json",
-    "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
+    "bump": "ncu -u -x numerous,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
     "clean": "shx rm -rf ./dist ./packages/*/dist ./exe ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/modern ./dist/modern ",
     "dev.vite": "cross-env NODE_ENV=development vite build --watch",
     "dev.packages": "turbo dev",
@@ -113,7 +113,7 @@
     "node-downloader-helper": "2.1.9",
     "npm-check-updates": "^17.1.2",
     "npm-run-all2": "^6.2.3",
-    "numerous": "2.0.0",
+    "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
@@ -131,7 +131,7 @@
     "simple-update-notifier": "^2.0.0",
     "terser": "^5.33.0",
     "terser-config-atomic": "^1.0.0",
-    "time-delta": "github:aminya/time-delta#d732dbc4fe991ab323cfa9075df8a7988537926e",
+    "time-delta": "github:aminya/time-delta#69d91a4",
     "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
