--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,7 +9,7 @@
       "groupName": "devDependencies",
       "semanticCommitType": "chore",
       "automerge": true,
-      "ignoreDeps": ["eslint"]
+      "ignoreDeps": ["eslint", "numerous"]
     },
     {
       "matchDepTypes": ["dependencies"],
