--- a/packages/envosman/package.json
+++ b/packages/envosman/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@types/node": "^12",
+    "@types/node": "22.5.5",
     "admina": "^1.0.1",
     "ci-info": "^4.0.0",
     "escape-path-with-spaces": "^1.0.2",
