--- a/packages/setup-brew/package.json
+++ b/packages/setup-brew/package.json
@@ -18,7 +18,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "@types/node": "^12",
+    "@types/node": "22.5.5",
     "ci-log": "workspace:*",
     "envosman": "workspace:*",
     "which": "4.0.0",
