--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "turbo": "2.1.2",
     "typescript": "^5.6.2",
     "ubuntu-version": "^2.0.0",
+    "unicorn-magic": "^0.3.0",
     "untildify-user": "workspace:*",
     "util.types": "^0.0.2",
     "vite": "^5.4.6",
