chore: use matchPackageNames for renovate [skip ci]

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,7 +9,7 @@
       "groupName": "devDependencies",
       "semanticCommitType": "chore",
       "automerge": true,
-      "ignoreDeps": ["eslint", "numerous", "execa"]
+      "matchPackageNames": ["!eslint", "!numerous", "!execa"]
     },
     {
       "matchDepTypes": ["dependencies"],
