chore: add ignored deps for renovate [skip ci]

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,7 +15,8 @@
       "matchDepTypes": ["dependencies"],
       "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest", "lockFileMaintenance", "rollback", "bump"],
       "groupName": "dependencies",
-      "semanticCommitType": "fix"
+      "semanticCommitType": "fix",
+      "matchPackageNames": ["!eslint", "!numerous", "!execa"]
     }
   ]
 }
