ci: commit the dist after the build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,13 +56,17 @@ jobs:
         run: |
           pnpm run test.lint
 
-      - name: Validate Dist
+      - name: Update Dist
         run: |
           if [ "$(git diff --ignore-space-at-eol --text dist/ | wc -l)" -gt "0" ]; then
-            echo "Detected uncommitted changes after build. See status below:"
-            git diff --ignore-space-at-eol --text dist/ ':(exclude)*.js.map'
-            exit 1
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add dist/
+            git commit -m "chore(build): update dist"
+            git push
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Dist
         uses: actions/upload-artifact@v3
