--- a/src/llvm/github_llvm_llvm-project.json
+++ b/src/llvm/github_llvm_llvm-project.json
@@ -1,4 +1,79 @@
 {
+  "llvmorg-19.1.6": [
+    "clang+llvm-19.1.6-x86_64-pc-windows-msvc.tar.xz",
+    "LLVM-19.1.6-win64.exe",
+    "LLVM-19.1.6-win32.exe",
+    "LLVM-19.1.6-macOS-X64.tar.xz",
+    "LLVM-19.1.6-macOS-ARM64.tar.xz",
+    "LLVM-19.1.6-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.5": [
+    "clang+llvm-19.1.5-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.5-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.5-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.5-woa64.exe",
+    "LLVM-19.1.5-win64.exe",
+    "LLVM-19.1.5-win32.exe",
+    "LLVM-19.1.5-macOS-X64.tar.xz",
+    "LLVM-19.1.5-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.4": [
+    "clang+llvm-19.1.4-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.4-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.4-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.4-woa64.exe",
+    "LLVM-19.1.4-win64.exe",
+    "LLVM-19.1.4-win32.exe",
+    "LLVM-19.1.4-macOS-X64.tar.xz",
+    "LLVM-19.1.4-macOS-ARM64.tar.xz",
+    "LLVM-19.1.4-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.3": [
+    "clang+llvm-19.1.3-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.3-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.3-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.3-woa64.exe",
+    "LLVM-19.1.3-win64.exe",
+    "LLVM-19.1.3-win32.exe",
+    "LLVM-19.1.3-macOS-X64.tar.xz",
+    "LLVM-19.1.3-macOS-ARM64.tar.xz",
+    "LLVM-19.1.3-Windows-X64.tar.xz",
+    "LLVM-19.1.3-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.2": [
+    "clang+llvm-19.1.2-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.2-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.2-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.2-woa64.exe",
+    "LLVM-19.1.2-win64.exe",
+    "LLVM-19.1.2-win32.exe",
+    "LLVM-19.1.2-macOS-ARM64.tar.xz",
+    "LLVM-19.1.2-Windows-X64.tar.xz",
+    "LLVM-19.1.2-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.1": [
+    "clang+llvm-19.1.1-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.1-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.1-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.1-woa64.exe",
+    "LLVM-19.1.1-win64.exe",
+    "LLVM-19.1.1-win32.exe",
+    "LLVM-19.1.1-macOS-ARM64.tar.xz",
+    "LLVM-19.1.1-Windows-X64.tar.xz",
+    "LLVM-19.1.1-Linux-X64.tar.xz"
+  ],
+  "llvmorg-19.1.0": [
+    "clang+llvm-19.1.0-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-19.1.0-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-19.1.0-aarch64-linux-gnu.tar.xz",
+    "LLVM-19.1.0-woa64.exe",
+    "LLVM-19.1.0-win64.exe",
+    "LLVM-19.1.0-win32.exe",
+    "LLVM-19.1.0-macOS-X64.tar.xz",
+    "LLVM-19.1.0-macOS-ARM64.tar.xz",
+    "LLVM-19.1.0-Windows-X64.tar.xz",
+    "LLVM-19.1.0-Linux-X64.tar.xz"
+  ],
   "llvmorg-18.1.8": [
     "clang+llvm-18.1.8-x86_64-pc-windows-msvc.tar.xz",
     "clang+llvm-18.1.8-x86_64-linux-gnu-ubuntu-18.04.tar.xz",
