--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,9 +82,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - windows-2022
-          - ubuntu-24.04
-          - macos-13
+          - windows-2019
+          - ubuntu-20.04
+          - macos-13 # x64
           - macos-14 # arm64
     steps:
       - uses: actions/checkout@v4
@@ -144,9 +144,9 @@ jobs:
           - ubuntu-22.04
           - ubuntu-20.04
           - macos-15 # arm64
-          - macos-15-large # x64
+          # - macos-15-large # x64
           - macos-14 # arm64
-          - macos-14-large # x64
+          # - macos-14-large # x64
           # - macos-14-xlarge #arm64
           - macos-13 # x64
     steps:
