--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build.vite": "cross-env NODE_ENV=production vite build",
     "build.vite.legacy": "cross-env NODE_ENV=production TARGET=legacy vite build",
     "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && minijson --file ./dist/**/*.json",
-    "bump": "ncu -u -x execa,numerous,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
+    "bump": "ncu -u -x execa,numerous,eslint,@types/eslint,which && pnpm update && pnpx typesync && pnpm run clean",
     "bump.llvm": "GITHUB_TOKEN=$(gh auth token) tsx ./src/llvm/assets-list.ts",
     "bump.gcc": "GITHUB_TOKEN=$(gh auth token) tsx ./src/gcc/assets-list.ts",
     "bump.infer": "GITHUB_TOKEN=$(gh auth token) tsx ./src/infer/assets-list.ts",
@@ -59,45 +59,45 @@
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
   },
   "devDependencies": {
-    "@actions/cache": "^3.2.4",
-    "@actions/core": "^1.10.1",
+    "@actions/cache": "^4.0.0",
+    "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@aminya/minijson": "1.1.0",
-    "@babel/core": "^7.25.2",
-    "@biomejs/biome": "^1.9.2",
+    "@babel/core": "^7.26.0",
+    "@biomejs/biome": "^1.9.4",
     "@iarna/toml": "^2.2.5",
     "@liuli-util/vite-plugin-node": "^0.9.0",
-    "@octokit/core": "^6.1.2",
-    "@octokit/openapi-types": "^22.2.0",
-    "@octokit/plugin-paginate-rest": "^11.3.3",
-    "@octokit/plugin-rest-endpoint-methods": "^13.2.4",
-    "@octokit/rest": "^21.0.2",
-    "@octokit/types": "^13.5.0",
+    "@octokit/core": "^6.1.3",
+    "@octokit/openapi-types": "^23.0.1",
+    "@octokit/plugin-paginate-rest": "^11.4.0",
+    "@octokit/plugin-rest-endpoint-methods": "^13.3.0",
+    "@octokit/rest": "^21.1.0",
+    "@octokit/types": "^13.7.0",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
-    "@swc/jest": "^0.2.36",
+    "@swc/jest": "^0.2.37",
     "@types/babel__core": "~7.20.5",
     "@types/cross-spawn": "^6.0.6",
     "@types/escape-quotes": "~1.0.0",
     "@types/eslint": "^9.6.1",
     "@types/iarna__toml": "~2.0.5",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/memoizee": "^0.4.11",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.10.5",
     "@types/semver": "^7.5.8",
     "@types/which": "^3.0.4",
     "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#02526f866c4f57d3a097590942dc0e700fb3eb15",
     "admina": "^1.0.1",
     "caxa": "^3.0.1",
-    "ci-info": "^4.0.0",
+    "ci-info": "^4.1.0",
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
-    "cross-spawn": "^7.0.3",
-    "cspell": "^8.14.4",
+    "cross-spawn": "^7.0.6",
+    "cspell": "^8.17.1",
     "diagnostics_channel": "^1.1.0",
-    "dprint": "^0.47.2",
+    "dprint": "^0.48.0",
     "envosman": "workspace:*",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
@@ -108,24 +108,24 @@
     "execa": "^7",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
-    "lefthook": "^1.7.15",
+    "lefthook": "^1.10.3",
     "macos-release": "^3.3.0",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
     "node-downloader-helper": "2.1.9",
-    "npm-check-updates": "^17.1.2",
-    "npm-run-all2": "^6.2.3",
+    "npm-check-updates": "^17.1.13",
+    "npm-run-all2": "^7.0.2",
     "numerous": "1.0.3",
-    "p-timeout": "^6.1.2",
+    "p-timeout": "^6.1.4",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
-    "prettier": "3.3.3",
+    "prettier": "3.4.2",
     "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
-    "rollup": "^4.22.0",
+    "rollup": "^4.30.1",
     "safe-stable-stringify": "^2.5.0",
     "semver": "7.6.3",
     "setup-apt": "workspace:*",
@@ -133,20 +133,20 @@
     "setup-python": "github:aminya/setup-python#9700887",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
-    "terser": "^5.33.0",
+    "terser": "^5.37.0",
     "terser-config-atomic": "^1.0.0",
     "time-delta": "github:aminya/time-delta#69d91a4",
     "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
-    "turbo": "2.1.2",
-    "typescript": "^5.6.2",
+    "turbo": "2.3.3",
+    "typescript": "^5.7.3",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
     "util.types": "^0.0.2",
-    "vite": "^5.4.6",
-    "vite-plugin-babel": "^1.2.0",
-    "web-streams-polyfill": "^4.0.0",
+    "vite": "^6.0.7",
+    "vite-plugin-babel": "^1.3.0",
+    "web-streams-polyfill": "^4.1.0",
     "which": "^4.0.0"
   },
   "productionDependencies": [
