--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/cross-spawn": "^6.0.6",
     "@types/escape-quotes": "~1.0.0",
     "@types/eslint": "^9.6.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.14",
     "@types/memoizee": "^0.4.11",
@@ -107,6 +108,7 @@
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
     "execa": "^7",
+    "fs-extra": "^11.3.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
     "lefthook": "^1.10.3",
@@ -186,7 +188,8 @@
     "untildify-user",
     "util.types",
     "web-streams-polyfill",
-    "timers-browserify"
+    "timers-browserify",
+    "fs-extra"
   ],
   "engines": {
     "node": ">=12.x",
