--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,16 +2,12 @@ name: CI
 on:
   pull_request:
   push:
-    branches:
-      - master
-      - main
-      - dev
     tags:
       - "*"
   workflow_dispatch:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 env:
@@ -255,6 +251,8 @@ jobs:
           file: ./dev/docker/ci/${{ matrix.container.file }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}:latest
+          cache-from: type=registry,ref=user/app:latest
+          cache-to: type=inline
 
       - name: Test
         uses: docker/build-push-action@v6
@@ -266,19 +264,20 @@ jobs:
 
   Release:
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [Build, BuildExecutable, Test, Docker]
+    needs: [Build, BuildExecutable, Test]
     runs-on: ubuntu-24.04
     steps:
-      - name: Download All Artifacts
+      - name: Download Executables
         uses: actions/download-artifact@v4
+        with:
+          pattern: exe-*
+          path: exe/
 
-      - name: Place Artifacts
-        shell: bash
-        run: |
-          mv -v ./dist/ ./dist-artifacts
-          mv -v ./dist-artifacts/* ./
-
-          chmod +x -R ./exe/
+      - name: Download Dist
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
 
       - name: Draft the release
         uses: meeDamian/github-release@2.0
