--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "lint.biome": "biome check --write --unsafe",
     "lint.dprint": "dprint fmt",
     "lint.root.tsc": "tsc --noEmit --pretty",
-    "lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
+    "lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
     "publish.all": "pnpm -r publish && pnpm publish",
     "prepublishOnly": "run-s build && shx rm ./dist/tsconfig.tsbuildinfo",
     "test.lint": "run-p --aggregate-output --continue-on-error test.lint.** lint.cspell lint.root.tsc",
-    "test.lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
+    "test.lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
