--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -217,7 +217,7 @@ jobs:
           node ./dist/legacy/setup-cpp.js --gcc true --cmake true
 
   Docker:
-    name: Docker-${{ matrix.container.image }}
+    name: Docker-${{ matrix.container.image }}-${{ matrix.platform }}
     needs: [Build]
     runs-on: ${{ matrix.os }}
     strategy:
@@ -225,6 +225,9 @@ jobs:
       matrix:
         os:
           - ubuntu-24.04
+        platform:
+          - linux/amd64
+          - linux/arm64
         container:
           - { file: "ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-0.46.2" }
           - { file: "fedora-llvm.dockerfile", image: "setup-cpp-fedora-llvm", tag: "40-0.46.2" }
@@ -242,6 +245,13 @@ jobs:
         with:
           name: dist
 
+      - name: Set up QEMU
+        if: contains(matrix.platform, 'arm64')
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
@@ -255,6 +265,7 @@ jobs:
           context: .
           file: ./dev/docker/ci/${{ matrix.container.file }}
           push: ${{ github.event_name != 'pull_request' }}
+          platforms: ${{ matrix.platform }}
           tags: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}:latest
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
@@ -265,6 +276,7 @@ jobs:
           context: .
           file: ./dev/docker/examples/${{ matrix.container.file }}
           push: false
+          platforms: ${{ matrix.platform }}
           tags: aminya/test-${{ matrix.container.image }}:${{ matrix.container.tag }}
 
   Release:
